# security-investigation-agent

./: .gitignore  LICENSE  README.md  architecture-diagram.excalidraw  config.yaml.example  prompts.yaml  pyproject.toml  start_vllm.sh  workflow.mmd
docs/: FAILURE_ANALYSIS_GUIDE.md
log-viewer/: app.py
siem_agent/: __init__.py  __main__.py  agent_state.py  clickhouse.py  config.py  execute.py  language_detect.py  llm_utils.py  logging_helper.py  logging_utils.py  main.py  nodes.py  session_logger.py  sql_utils.py  synthesize.py  tag_processor.py  tools.py
siem_agent/baml_src/: clients.baml  fragments.baml  investigation_plan.baml  sql_repair.baml  synthesize_and_replan.baml  system.baml  translate.baml  types.baml
support-scripts/: debug_query.py
test_runner/: __init__.py  __main__.py  main.py
test_runner/baml_src/: clients.baml  generators.baml  judge.baml  types.baml
test_runner/test/: test_cases.yaml
tests/: README.md  run_agent_eval.py  test_sql_processing.py  test_sql_transform.py  test_tag_processor.py
tests/cases/: 00_smoke_waf_event_count.yaml  01_smoke_attack_type_distribution.yaml  02_waf_top_attacker_detailed_analysis.yaml  03_waf_most_attacked_path_analysis.yaml  04_waf_cdn_correlation_deny_vs_403.yaml  05_waf_cdn_env_file_attacks.yaml  06_waf_cdn_overall_security_posture.yaml  07_waf_monitor_mode_bot_impact.yaml  08_waf_dos_attacker_campaign_analysis.yaml  09_waf_path_temporal_pattern_analysis.yaml  10_unanswerable_authenticated_users.yaml  (+1 more)
web_ui/: __init__.py  __main__.py  app.py  config.py  db.py  worker.py
web_ui/templates/: base.html  (+3 more)
